// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/delete_post_modal should match snapshot for delete_post_modal with 0 comments 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="deletePostModalLabel"
      class="fade in modal"
      id="deletePostModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="deletePostModalLabel"
            >
              Confirm Post Delete
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <p>
              Are you sure you want to delete this message?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-tertiary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="btn btn-danger"
              id="deletePostModalButton"
              type="button"
            >
              Delete
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/delete_post_modal should match snapshot for delete_post_modal with 1 comment 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="deletePostModalLabel"
      class="fade in modal"
      id="deletePostModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="deletePostModalLabel"
            >
              Confirm Post Delete
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <p>
              Are you sure you want to delete this message?
            </p>
            <p>
              This message has 1 comment on it.
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-tertiary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="btn btn-danger"
              id="deletePostModalButton"
              type="button"
            >
              Delete
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`components/delete_post_modal should match snapshot for post with 1 commentCount and is not rootPost 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  />
  <div
    role="none"
  >
    <div
      class="fade modal-backdrop in"
    />
    <div
      aria-labelledby="deletePostModalLabel"
      class="fade in modal"
      id="deletePostModal"
      role="dialog"
      style="display: block; padding-right: 0px;"
      tabindex="-1"
    >
      <div
        class="a11y__modal modal-dialog"
      >
        <div
          class="modal-content"
          role="document"
        >
          <div
            class="modal-header"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
              <span
                class="sr-only"
              >
                Close
              </span>
            </button>
            <h1
              class="modal-title"
              id="deletePostModalLabel"
            >
              Confirm Comment Delete
            </h1>
          </div>
          <div
            class="modal-body"
          >
            <p>
              Are you sure you want to delete this comment?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-tertiary"
              type="button"
            >
              Cancel
            </button>
            <button
              class="btn btn-danger"
              id="deletePostModalButton"
              type="button"
            >
              Delete
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
